# Krusty-craps

./: Cargo.toml  README.md  input.toml  msgpack.min.js  package-lock.json  package.json
.cargo/: config.toml
src/: connecting_websocket.rs  drone.rs  drones.rs  generalUse.rs  general_use.rs  main.rs  network_initializer.rs  ui.rs  ui_traits.rs
src/clients/: client.rs  clientChen.rs  clientDanyl.rs  client_chen.rs  client_danylo.rs  mod.rs  server.rs
src/clients/client_chen/: client_chen.rs  general_client_traits.rs  mod.rs  prelude.rs  traits.rs  ui.rs  ui_traits.rs  web_browser_client_traits.rs
src/clients/client_chen/impl_general_client_traits/: impl_client_events.rs  impl_command_handler.rs  impl_communication_tools.rs  impl_flooding_packets_handler.rs  impl_fragment_handler.rs  impl_packet_creator.rs  impl_packet_response_handler.rs  impl_packets_receiver.rs  impl_router.rs  impl_sending.rs  impl_server_query.rs  mod.rs
src/clients/client_danylo/: chat_client.rs  chat_gui.rs  client_danylo.rs  fragments.rs  impl_monitoring.rs  message_fragments.rs  mod.rs  test_gui.rs  test_ui.rs  ui.rs
src/rusty_drones_drone/.github/workflows/: clippy.yml  rust-fmt.yml  test.yml
src/rusty_drones_drone/src/: lib.rs
src/rusty_drones_drone/src/checkers/: integrations.rs  mod.rs  wgl_test.rs
src/rusty_drones_drone/src/checkers/flood/: extra_flood.rs  mod.rs  normal_flood.rs
src/rusty_drones_drone/src/drone/: channels.rs  command_handler.rs  flood_handler.rs  mod.rs  packet_handler.rs  utils.rs
src/rusty_drones_drone/src/drone/test/: drone_command.rs  drone_flood.rs  drone_packet.rs  mod.rs
src/rusty_drones_drone/src/testing_utils/: drone_options.rs  mod.rs
src/rusty_drones_drone/src/testing_utils/data/: mod.rs
src/rusty_drones_drone/src/testing_utils/network_initializer/: mod.rs
src/server/: communication_server.rs  content.rs  media_server.rs  mod.rs  server.rs  text_server.rs
src/servers/: communication_server.rs  content.rs  media_server.rs  mod.rs  server.rs  text_server.rs
src/simulation_controller/: mod.rs  simulation_controller.rs
src/tests/: mod.rs  test_flooding.rs  test_fragments.rs  tests.rs  util.rs
static/: index.html
