[package]
name = "KrustyCrap"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
crossbeam-channel = "0.5.13"
toml = "0.8.19"
rand = "0.9.0-beta.1"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
log = "0.4.22"
base64 = "0.22.1"
tokio = "1.42.0"

krusty_drone = { git = "https://github.com/Danylo37/krusty_drone.git"}
rustable-drone = {git = "https://github.com/SmL-Boi/RustableDroneLib.git"}
bagel_bomber = {git = "https://github.com/daw-dev/bagel-bomber.git"}
RF_drone = {git = "https://github.com/RustAndFurious/RF_drone.git"}
fungi_drone = {git = "https://github.com/Fungi-B-D/Fungi-Drone.git"}
rustbusters-drone = {git = "https://github.com/Rustbusters/drone.git"}
rusteze_drone = {git = "https://github.com/Rusteze-AP/drone.git"}
skylink = {git = "https://github.com/Suge42/Skylink_drone.git"}
rolling_drone = {git = "https://github.com/giorebecchi/RollingDrone.git"}
bobry_w_locie = {git = "https://github.com/Seregno/Public_Bry_w_locie.git"}
rusty_drones = {git = "https://github.com/rusty-drone-2024/rusty-drone.git" }


