[package]
name = "KrustyCrap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

# [[bin]]
# name = "server"
# path = "src/connecting_websocket.rs"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
crossbeam-channel = "0.5.13"
toml = "0.8.19"
rand = "0.8.5"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.6"
base64 = "0.22.1"
eframe = "0.30.0"
warp = "0.3"
tokio = { version = "1.42.0", features = ["full"] }
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tungstenite = "0.26.0"
rmp-serde = "1.3.0"  # MessagePack serialization

krusty_drone = { git = "https://github.com/Danylo37/krusty_drone.git"}
rustable-drone = {git = "https://github.com/SmL-Boi/RustableDroneLib.git"}
bagel_bomber = {git = "https://github.com/daw-dev/bagel-bomber.git"}
RF_drone = {git = "https://github.com/RustAndFurious/RF_drone.git"}
fungi_drone = {git = "https://github.com/Fungi-B-D/Fungi-Drone.git"}
rustbusters-drone = {git = "https://github.com/Rustbusters/drone.git"}
rusteze_drone = {git = "https://github.com/Rusteze-AP/drone.git"}
skylink = {git = "https://github.com/Suge42/Skylink_drone.git"}
rolling_drone = {git = "https://github.com/giorebecchi/RollingDrone.git"}
#bobry_w_locie = {git = "https://github.com/Seregno/Public_Bry_w_locie.git"}
rusty_drones = {git = "https://github.com/rusty-drone-2024/rusty-drone.git" }



